--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.5.17",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
+    "vue-touch": "^2.0.0-beta.4",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
   },
